# crypto-pair-ffi

./: Cargo.toml  README.md  build.rs  cbindgen.toml
include/: crypto_pair.h  crypto_pair_ffi.h
src/: lib.rs
