[package]
name = "crypto-pair-ffi"
version = "0.0.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
crypto-market-type = "1.1.0"
crypto-pair = "2.2.10"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
lto = true
codegen-units = 1
